--- a/part1/LogOutput/manifests/service.yaml
+++ b/part1/LogOutput/manifests/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: todoserver-svc
+  name: logoutput-svc
 spec:
   type: ClusterIP
   selector:
-    app: todoserver
+    app: logoutput
   ports:
-  - port: 1234
+  - port: 1235
     targetPort: 3000
     protocol: TCP
