--- a/part1/LogOutput/manifests/ingress.yaml
+++ b/part1/LogOutput/manifests/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: logoutput-ingress
+  annotations:
+    traefik.ingress.kubernetes.io/router.middlewares: default-pingpong-stripprefix@kubernetescrd
 spec:
   rules:
   - http:
@@ -13,3 +15,10 @@ spec:
             name: logoutput-svc
             port: 
               number: 1235
+      - pathType: Prefix
+        path: "/pingpong"
+        backend:
+          service:
+            name: pingpong-svc
+            port:
+              number: 1236
