--- a/part1/manifests/ingress.yaml
+++ b/part1/manifests/ingress.yaml
@@ -9,6 +9,13 @@ spec:
   - http:
       paths:
       - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: todoserver-svc
+            port:
+              number: 1234
+      - pathType: Prefix
         path: "/logs"
         backend:
           service:
