--- a/part1/todoserver/package.json
+++ b/part1/todoserver/package.json
@@ -9,6 +9,8 @@
   "author": "Petri Paukkunen",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.24.0",
+    "express": "^4.17.1",
+    "pug": "^3.0.2"
   }
 }
