--- a/part2/pingpong/manifests/middleware.yaml
+++ b/part2/pingpong/manifests/middleware.yaml
@@ -1,6 +1,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
+  namespace: apps-ns
   name: pingpong-stripprefix
 spec:
   stripPrefix:
