--- a/part2/logapps/manifests/deployment.yaml
+++ b/part2/logapps/manifests/deployment.yaml
@@ -1,6 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: apps-ns
   name: logoutput-dep
 spec:
   replicas: 1
@@ -17,7 +18,7 @@ spec:
           emptyDir: {}
       containers:
         - name: logoutput
-          image: pndy/logoutput:2.01.4
+          image: pndy/logoutput:2.03
           volumeMounts:
             - name: log-volume
               mountPath: /usr/src/app/files
