--- a/part2/pingpong/manifests/deployment.yaml
+++ b/part2/pingpong/manifests/deployment.yaml
@@ -12,13 +12,9 @@ spec:
       labels:
         app: pingpong
     spec:
-      volumes:
-        - name: shared-pings
-          persistentVolumeClaim:
-            claimName: logapps-claim
       containers:
       - name: pingpong
-        image: pndy/pingpong:1.11.6
-        volumeMounts:
-          - name: shared-pings
-            mountPath: /usr/src/app/files
+        image: pndy/pingpong:2.07.10
+        envFrom:
+          - secretRef:
+              name: pg-secret
