--- a/part2/todoapp/backend/manifests/deployment.yaml
+++ b/part2/todoapp/backend/manifests/deployment.yaml
@@ -15,4 +15,7 @@ spec:
     spec:
       containers:
       - name: todoserver
-        image: pndy/todoserver:2.02.1
+        image: pndy/todoserver:2.08.1
+        envFrom:
+          - secretRef:
+              name: pg-secret
