--- a/part2/todoapp/backend/package.json
+++ b/part2/todoapp/backend/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "axios": "^0.24.0",
     "express": "^4.17.1",
-    "pug": "^3.0.2"
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "pug": "^3.0.2",
+    "sequelize": "^6.9.0"
   }
 }
