--- a/part3/logapps/manifests/service.yaml
+++ b/part3/logapps/manifests/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pingpong-svc
+  name: logoutput-svc
 spec:
   type: NodePort
   selector:
-    app: pingpong
+    app: logoutput
   ports:
   - port: 80
     targetPort: 3000
