--- a/part3/pingpong/manifests/deployment.yaml
+++ b/part3/pingpong/manifests/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: pingpong-dep
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: pingpong
@@ -13,7 +14,7 @@ spec:
     spec:
       containers:
       - name: pingpong
-        image: pndy/pingpong:2.07.10
+        image: pndy/pingpong:3.02.1
         envFrom:
           - secretRef:
               name: pg-secret
