--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,10 +29,8 @@ jobs:
       - run: gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
 
       - name: Build
-        run: cd ./part3/todoapp/frontend && docker build \
-          --tag "gcr.io/$PROJECT_ID/$IMAGE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA" \
-          .
-          
+        run: cd ./part3/todoapp/frontend && docker build . -t "gcr.io/$PROJECT_ID/$IMAGE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA"
+
       - name: Publish
         run: docker push "gcr.io/$PROJECT_ID/$IMAGE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA"
 
