--- a/part3/manifests/ingress.yaml
+++ b/part3/manifests/ingress.yaml
@@ -20,3 +20,10 @@ spec:
             name: logoutput-svc
             port: 
               number: 80
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: todofrontend-svc
+            port: 
+              number: 80
