--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,15 +47,17 @@ jobs:
       - name: Deploy Frontend
         run: |-
           cd ./part3/todoapp/frontend
+          kubectl create namespace ${GITHUB_REF#refs/heads/}
+          kubectl config set-context --current --namespace=${GITHUB_REF#refs/heads/}
+          kustomize edit set namespace ${GITHUB_REF#refs/heads/}
           kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
           kustomize build . | kubectl apply -f -
           kubectl rollout status deployment/todofrontend-dep
-          kubectl get services -o wide
 
       - name: Deploy Backend
         run: |-
           cd ./part3/todoapp/backend
+          kustomize edit set namespace ${GITHUB_REF#refs/heads/}
           kustomize edit set image gcr.io/PROJECT_ID/IMAGE_BACKEND:TAG=gcr.io/$PROJECT_ID/$IMAGE_BACKEND:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
           kustomize build . | kubectl apply -f -
           kubectl rollout status deployment/todoserver-dep
-          kubectl get services -o wide
