--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -57,6 +57,7 @@ jobs:
       - name: Deploy Backend
         run: |-
           cd ./part3/todoapp/backend
+          kubectl get secret pg-secret --namespace=default -o yaml | sed "s/namespace: .*/namespace: ${GITHUB_REF#refs/heads/}/" | kubectl apply -f -
           kustomize edit set namespace ${GITHUB_REF#refs/heads/}
           kustomize edit set image gcr.io/PROJECT_ID/IMAGE_BACKEND:TAG=gcr.io/$PROJECT_ID/$IMAGE_BACKEND:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
           kustomize build . | kubectl apply -f -
