--- a/part3/logapps/manifests/deployment.yaml
+++ b/part3/logapps/manifests/deployment.yaml
@@ -37,8 +37,16 @@ spec:
                 secretKeyRef:
                   name: service-apikey
                   key: API_KEY
+          resources:
+            limits:
+              cpu: "250m"
+              memory: "100Mi"
         - name: loggenerator
           image: pndy/loggenerator:1.13
           volumeMounts:
             - name: log-volume
               mountPath: /usr/src/app/files
+          resources:
+            limits:
+              cpu: "100m"
+              memory: "100Mi"
