--- a/part3/pingpong/manifests/deployment.yaml
+++ b/part3/pingpong/manifests/deployment.yaml
@@ -18,3 +18,7 @@ spec:
         envFrom:
           - secretRef:
               name: pg-secret
+        resources:
+          limits:
+            cpu: "100m"
+            memory: "100Mi"
