--- a/part3/todoapp/backend/manifests/deployment.yaml
+++ b/part3/todoapp/backend/manifests/deployment.yaml
@@ -18,3 +18,7 @@ spec:
         envFrom:
           - secretRef:
               name: pg-secret
+        resources:
+          limits:
+            cpu: "250m"
+            memory: "100Mi"
