--- a/part3/todoapp/frontend/manifests/deployment.yaml
+++ b/part3/todoapp/frontend/manifests/deployment.yaml
@@ -15,3 +15,7 @@ spec:
       containers:
       - name: todofrontend
         image: gcr.io/PROJECT_ID/IMAGE:TAG
+        resources:
+          limits:
+            cpu: "250m"
+            memory: "100Mi"
