--- a/part2/logapps/manifests/secret.enc.yaml
+++ b/part2/logapps/manifests/secret.enc.yaml
@@ -1,11 +1,11 @@
-apiVersion: ENC[AES256_GCM,data:vyI=,iv:GfK1nVVbv5oVEwCsXuW/Ukpv8MrYjeSEt8IskreBRxk=,tag:CCHyM0et6gQR9Moe4z3saA==,type:str]
-kind: ENC[AES256_GCM,data:Y1sJILTT,iv:FtmqZ7/UC/EjCL4zTVcWEty2QCIufxFkiA4oE4QWiLY=,tag:nK8yPOthCsU61X3LNvvlSQ==,type:str]
+apiVersion: ENC[AES256_GCM,data:pYA=,iv:wGjV4KOO0cROkkJhJW5Tp7tTh5Xru+s8eeitadYJWXI=,tag:nDg2oUDl/Ekz6qr4rf4pvw==,type:str]
+kind: ENC[AES256_GCM,data:4W7upl+O,iv:M7CKGS2y0AXVeYow2O2sqA4LK+O1QUpJcIaRUfD+zuE=,tag:R6EnenAY9pMbyGDhd6sWww==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:pVXtZw9PJKKPH6hBpbs=,iv:hBUDl3g56h3OVCNcjvLtcMPywVqwEAV26I8wBHBMVRI=,tag:5U9NK04xUcpV70TzBHONww==,type:str]
-    namespace: ENC[AES256_GCM,data:LVaUB0YxNQ==,iv:VoxFdF4zQVublYWk14HOxGCEBuHgOEVQVS5RROYjBL4=,tag:Fok1zD4PKgQjCJBL+QwAjw==,type:str]
-type: ENC[AES256_GCM,data:3TtozPNV,iv:a36hcRIxJB5L5Um9HuCcHXVBU1tdMorsAlJfdTd3ASI=,tag:zumg42pbYemO7iNHqRsxCw==,type:str]
+    name: ENC[AES256_GCM,data:m27SoRc/kDPiv0lONfY=,iv:xLFrTMj+YngzOgApcrjD6VClbKYs4flHtBJBzsqinM0=,tag:zx0bJmB8mie2acjLq408/w==,type:str]
+    namespace: ENC[AES256_GCM,data:osvygDa+xg==,iv:xoW+30JsDDtM/7ztaeAF0B8NkCa0G3aP7PhhalfHelc=,tag:jb5Vdf5y37aIIdXU7FeB0Q==,type:str]
+type: ENC[AES256_GCM,data:Lh8ogtdt,iv:vrHu5tlUWL+5i0bJnelg+K3RhyLKBJFRqohqB7HEc6o=,tag:krWQBNfqc0jk6pwBKlFchw==,type:str]
 data:
-    password: ENC[AES256_GCM,data:jyqrrDqaBmw=,iv:0P3qOLoiO2ryvDq1avvVVEgiOCeiOF8NXbxwtEbX3C8=,tag:FKTiBWiY1DnEf8putEUpXA==,type:str]
+    API_KEY: ENC[AES256_GCM,data:4bR9sS97FqA=,iv:SA1vaJxb/BZhKJ5pDs8enhYpyxY88pPL/0LE+cLwnP0=,tag:i3HK15hKsj8Ts0mxlWpZoQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age1tuscuex0jsh2xevu6fknq24uvdlk06zp0g7ql5atnjqlgnhrx4asn4errc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwWnlpWXF2SkNUazl3b2lp
-            Tk42elVNSjhxWjYrM2VraWF3RWtWNXVWZzBvClBCdC9MYXBQNUVUR2lQNEI0b2J5
-            dUJRaWV6cVZVTXRaSkFyNk1HN1JaYmcKLS0tIGk1UEFuUHdoZ21YRmdIT3EzN3o3
-            QnRSeWFQVXhzRHpBd0VtL0UwTGdUTVUKz0yDiv4Fg8vqc1W7WO5WMPDDRyfU8hcI
-            Ni3881kLN7LnpgCr5bJrcG+WVNRw2wqhhMP154tPgKRETdpBEaNwIA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXSEhwMVd3c2tyOHh4bFRQ
+            OXNCTWdIb1lMK1hLNmw5VmgzTEFXRlFPZkNnClozY0ZhdzdHMHVWR2pwUUdqWU5C
+            NWlkTkhNejIraVp3TG16VlAwODhkY2sKLS0tIHd2ZkJsTGZrT0pGbHBIZVMweDUy
+            NE1kc2ZHVVE5WCs1NGR2L0d1VUJxbTAKvOczC7V6NWPdo+jG3qqtdsWNp8+Yiwzv
+            R4deLD0I0giV266k5snAlayLypf7YkPyJKPtHHR6hFUEziXVJ15gcA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-11-12T21:56:23Z"
-    mac: ENC[AES256_GCM,data:swvKSHO2D5hJXwSePt6CDEr3fUAdOlfZJdpeRuz5g8eiriNfRzSghgH/c/Ii6+rPMwEJT6+9hfX4fJ/MaFTCaMB9/m/1JEOXtUWLkOYEeDsmF4xOPO/+hULgBIFK8TgKH2IpDl8/fj1y09ytAHH9+QI1KN3TAmZKwLUSlRCOAXk=,iv:XWiSQnrvWH7Gv756nhpSUmtf5bXeyk8z3SNQEJXP0Cw=,tag:KTKfA97aNC/Vw+BYRWLpfw==,type:str]
+    lastmodified: "2021-11-14T13:01:59Z"
+    mac: ENC[AES256_GCM,data:66PmoxF9bbjQ+ZaEnOcFSCpSyxq6i4QRgLwCOQCrdyz+50GdgMjQPXanYkTZrY2HteGnXgZyO8j9jnRUKBU+Z0eGcOyrtFmzYI6GVjpegfmOkjNi03VoOkPTB+hulvtgEtvJ7cEehqbYzm1VSR0RLWPNZmg+W1lsWs47BCFABjk=,iv:kTYE8ZB3z0we1tRXuWP6PiMOua4qQHjatVGpUBN32tg=,tag:uD6Px/cXqMLI1i0HteEl+Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
