--- a/part4/todoapp/backend/manifests/service.yaml
+++ b/part4/todoapp/backend/manifests/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pingpong-svc
+  name: todoserver-svc
 spec:
   selector:
-    app: pingpong
+    app: todoserver
   ports:
-  - port: 1234
+  - port: 1236
     targetPort: 3000
     protocol: TCP
