--- a/part4/todoapp/frontend/manifests/service.yaml
+++ b/part4/todoapp/frontend/manifests/service.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pingpong-svc
+  name: todofrontend-svc
 spec:
   selector:
-    app: pingpong
+    app: todofrontend
   ports:
-  - port: 1234
+  - port: 1237
     targetPort: 3000
-    protocol: TCP
