--- a/part4/todoapp/kustomization.yaml
+++ b/part4/todoapp/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
 
  - frontend/manifests/deployment.yaml
  - frontend/manifests/service.yaml
+ - frontend/manifests/service-todofrontend.yaml
