--- a/part4/todoapp/backend/manifests/deployment.yaml
+++ b/part4/todoapp/backend/manifests/deployment.yaml
@@ -1,12 +1,25 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Rollout
 metadata:
   name: todoserver-dep
+  namespace: project-ns
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: todoserver
+  strategy:
+    canary:
+        analysis:
+          templates:
+          - templateName: cpu-rate
+        steps:
+          - setWeight: 25
+          - pause:
+              duration: 30s
+          - setWeight: 50
+          - pause:
+              duration: 30s
   template:
     metadata:
       labels:
@@ -14,7 +27,7 @@ spec:
     spec:
       containers:
       - name: todoserver
-        image: pndy/todoserver:4.2
+        image: pndy/todoserver:4.4.4
         readinessProbe:
           initialDelaySeconds: 5
           periodSeconds: 5
