--- a/part4/todoapp/kustomization.yaml
+++ b/part4/todoapp/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
  - frontend/manifests/deployment.yaml
  - frontend/manifests/service.yaml
  - frontend/manifests/service-todofrontend.yaml
+
+ - consumer/deployment.yaml
