--- a/part4/todoapp/backend/manifests/deployment.yaml
+++ b/part4/todoapp/backend/manifests/deployment.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
       - name: todoserver
-        image: pndy/todoserver:4.5.3
+        image: pndy/todoserver:4.6.3
         readinessProbe:
           initialDelaySeconds: 5
           periodSeconds: 5
@@ -42,6 +42,9 @@ spec:
           httpGet:
             path: /live
             port: 9000
+        env:
+          - name: NATS_URL
+            value: nats://my-nats.default:4222
         envFrom:
           - secretRef:
               name: pg-secret
