--- a/part4/todoapp/consumer/package.json
+++ b/part4/todoapp/consumer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todoserver",
+  "name": "consumer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,13 +9,6 @@
   "author": "Petri Paukkunen",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.24.0",
-    "express": "^4.17.1",
-    "lightship": "^6.7.2",
-    "nats": "^1.4.12",
-    "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4",
-    "pug": "^3.0.2",
-    "sequelize": "^6.9.0"
+    "nats": "^1.4.12"
   }
 }
