--- a/.github/workflows/delete.yaml
+++ b/.github/workflows/delete.yaml
@@ -2,6 +2,8 @@ name: Delete Environment on Branch deletion
 
 on:
   delete:
+    paths:
+     - 'part3/**'
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT_ID }}
