--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,6 +2,8 @@ name: Deploy Frontend Application
 
 on:
   push:
+    paths:
+     - 'part3/**'
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT_ID }}
