--- a/part4/todoapp/frontend/manifests/service-todofrontend.yaml
+++ b/part4/todoapp/frontend/manifests/service-todofrontend.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ingress-todofrontend-svc
+  namespace: default
 spec:
   type: ExternalName
   externalName: todofrontend-svc.project-ns.svc.cluster.local
