--- a/part4/todoapp/kustomization.yaml
+++ b/part4/todoapp/kustomization.yaml
@@ -2,7 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
  - additionals/project-namespace.yaml
-
+ - additionals/analysis-template.yaml
+ 
  - backend/manifests/deployment.yaml
  - backend/manifests/service.yaml
 
