--- a/part4/todoapp/backend/kustomization.yaml
+++ b/part4/todoapp/backend/kustomization.yaml
@@ -3,3 +3,8 @@ kind: Kustomization
 resources:
 - manifests/deployment.yaml
 - manifests/service.yaml
+
+images:
+  - name: IMAGE_PLACEHOLDER
+    newName: pndy/todoserver
+    newTag: 4.6.3
