--- a/.github/workflows/gitops.yaml
+++ b/.github/workflows/gitops.yaml
@@ -40,7 +40,7 @@ jobs:
       uses: imranismail/setup-kustomize@v1
 
     - name: Update kustomize yaml
-      working-directory: part4/backend
+      working-directory: part4/todoapp/backend
       run: |-
         kustomize edit set image IMAGE_PLACEHOLDER=pndy/todoserver:${{ github.sha }}
 
