new update to backend 503b5ddcae6066c6842acafc2057c123bce0daeb

--- a/part4/todoapp/backend/kustomization.yaml
+++ b/part4/todoapp/backend/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
 - manifests/service.yaml
 
 images:
-  - name: IMAGE_PLACEHOLDER
-    newName: pndy/todoserver
-    newTag: 4.6.3
+- name: IMAGE_PLACEHOLDER
+  newName: pndy/todoserver
+  newTag: 503b5ddcae6066c6842acafc2057c123bce0daeb
