--- a/part4/todoapp/backend/manifests/deployment.yaml
+++ b/part4/todoapp/backend/manifests/deployment.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
       - name: todoserver
-        image: pndy/todoserver:4.6.3
+        image: IMAGE_PLACEHOLDER
         readinessProbe:
           initialDelaySeconds: 5
           periodSeconds: 5
